<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Summer Mobile Security</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Common text -->
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_reset">Clear</string>
    <string name="btn_save">Save</string>
    <string name="btn_setting">Setting</string>
    <string name="no_network">The internet is not available. Please click setting button to set up your network.</string>
    <string name="processing">Processing&#8230;</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="system_info">System Info</string>
    <string name="under_construction">Under construction&#8230;</string>

    <!-- Main Menu -->
    <string name="app_manager">App Manager</string>
    <string name="call_sms_blocker">Call &amp; SMS Blocker</string>
    <string name="data_monitor">Data Monitor</string>
    <string name="virus_scanner">Virus Scanner</string>
    <string name="about">About</string>

    <!-- Application Manager -->
    <string name="btn_lockApp">Lock</string>
    <string name="btn_unlockApp">Unlock</string>
    <string name="PIN_input">Enter your PIN</string>
    <string name="old_pin">Enter your old PIN</string>
    <string name="new_pin">Enter your new PIN</string>
    <string name="confirm_pin">Enter your new PIN again</string>
    <string name="title_activity_enter_pin">Enter Your PIN</string>
    <string name="all_apps">All Applications</string>
    <string name="running_apps">Running Applications</string>
	<string name="importance_background_desc">This process process contains background code that is expendable</string>   
	<string name="importance_empty_desc">This process is empty of any actively running code.</string>   
	<string name="importance_foreground_desc">This process is running the foreground UI.</string>   
	<string name="importance_perceptible_desc">This process is running something that is considered to be actively perceptible to the user.</string>   
	<string name="importance_service_desc">This process is contains services that should remain running.</string>   
	<string name="importance_visible_desc">This process is running something that is actively visible to the user, though not in the immediate foreground</string>   
    
    <!-- Error messages -->
    <string name="invalid_pin">Your PIN is invalid</string>
    <string name="unmatch_pin">Two PIN value is not match</string>
    <!-- DataMonitor -->
    <string name="daily">Daily data usage</string>
    <string name="today">Today:</string>
    <string name="mb"> MB</string>
    <string name="this_month">This Month: </string>
    <string name="remaining">Remaining:</string>
    <string name="set_data_plant">Set data plan</string>
    <string name="title_data">Set value > 1 if you want trace data usage</string>

     <!-- start contact list string -->
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>

    <!-- Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll. -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!-- When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
         -->
    <string name="search_match_other">Matches Other Field</string>

    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    
    <!-- end contact list -->
</resources>
