<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/padding" >

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/appLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/importance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/importance_background_desc"
            android:textColor="@android:color/darker_gray"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sys_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:focusable="false"
        android:textColor="@android:color/black"
        android:text="@string/system_info" />

</LinearLayout>