<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EnterPINActivity" >

    <TextView
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/old_pin"
        android:padding="10dp"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/old_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />
    
    <TextView
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_pin"
        android:padding="10dp"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/edit_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <TextView
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirm_pin"
        android:padding="10dp"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/confirm_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/transparent"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black" />
	
    <Button
        android:id="@+id/btn_ok"
        style="@style/Button"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_ok" />

</LinearLayout>